<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/server_addr_editText"
        android:hint="@string/server_addr_editText_hint"
        android:inputType="textUri"

        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/server_port_editText"
        android:hint="@string/server_port_editText_hint"
        android:inputType="number"

        android:layout_margin="10dp"
        android:layout_toRightOf="@+id/server_addr_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/msg_editText"
        android:hint="@string/msg_editText_hint"

        android:layout_margin="10dp"
        android:layout_below="@+id/server_addr_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/send_button"
        android:text="@string/send_button_text"

        android:layout_margin="5dp"
        android:layout_toRightOf="@+id/msg_editText"
        android:layout_below="@+id/server_port_editText"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/response_textView"
        android:text="@string/response_textView_text"

        android:layout_margin="10dp"
        android:layout_below="@+id/msg_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
